@@ -10,6 +10,8 @@ class InstrumentationResultTest {
 
     @Test
     void givenMinimal_whenBuild_thenHasPrimaryArtifact() {
+        // Note: resultsListPath can be null, but this will cause the analyzer
+        // to return an empty test list. In production, DiSLInstrumentor always sets this field.
         var res = InstrumentationResult.builder()
                 .primaryArtifact(Path.of("/tmp/instr.jar"))
                 .build();
@@ -17,6 +19,7 @@ class InstrumentationResultTest {
         assertTrue(res.getAdditionalArtifacts().isEmpty());
         assertNull(res.getIdentifiersMappingPath());
         assertNull(res.getResultsListPath());
+        assertNull(res.getTraceFilePath());
     }
 
     @Test
@@ -26,11 +29,13 @@ class InstrumentationResultTest {
                 .artifact(Path.of("/tmp/a.txt"))
                 .identifiersMappingPath(Path.of("/tmp/ids.ser"))
                 .resultsListPath(Path.of("/tmp/generated-tests.lst"))
+                .traceFilePath(Path.of("/tmp/trace.ser"))
                 .build();
         assertEquals(1, res.getAdditionalArtifacts().size());
-        assertEquals(Path.of("/tmp/a.txt"), res.getAdditionalArtifacts().get(0));
+        assertEquals(Path.of("/tmp/a.txt"), res.getAdditionalArtifacts().getFirst());
         assertEquals(Path.of("/tmp/ids.ser"), res.getIdentifiersMappingPath());
         assertEquals(Path.of("/tmp/generated-tests.lst"), res.getResultsListPath());
+        assertEquals(Path.of("/tmp/trace.ser"), res.getTraceFilePath());
     }
 }
 
